Implement Phase 1 of index entry refactor: core interfaces and initial generators